--- a/css/materialize.css
+++ b/css/materialize.css
@@ -796,7 +796,7 @@
 }
 
 .light-blue.lighten-1 {
-  background-color: #A2AAB0 !important;
+  background-color: #d2b29b !important;
 }
 
 .light-blue-text.text-lighten-1 {
@@ -1656,7 +1656,7 @@
 }
 
 .orange-text {
-  color: #4C586F  !important;
+  color: #E7AAA0  !important;
 }
 
 .orange.lighten-5 {
@@ -2159,7 +2159,7 @@ html {
  */
 body {
   margin: 0;
-  background-color: #EBECED;
+  background-color: #ECF0F1;
 }
 
 /* HTML5 display definitions
